# sbnd_analysis

sbnanalysis/ana/SBNOsc/: CMakeLists.txt  NueSelection.cxx  NueSelection.h  NueSelectionReco.cxx  NueSelectionReco.h  NueSelection_cut.cxx  NueSelection_full.cxx  NumuSelection.cxx  output_SBNOsc_NueSelection_Proposal_SBND.root
sbnanalysis/ana/SBNOsc/MakePlots/: NueSelectionPlots.C
sbnanalysis/ana/SBNOsc/RecoUtils/: CMakeLists.txt
sbnanalysis/core/: Event.hh
